# AdventureLog

./: .env.example  .env.traefik.example  BUSINESS_FEATURE_COMPARISON.md  DOCKER_TESTING.md  FIXES_APPLIED.md  MIGRATION_STATUS.md  SQLALCHEMY_MIGRATION_COMPLETE.md  docker-compose-traefik.yaml  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.test.yml  docker-compose.yml  rebuild.sh  test-alpine-errors.html
backend/: .dockerignore  Dockerfile  entrypoint.sh
backend_fastapi/: .dockerignore  .gitignore  DOCKER_OPTIMIZATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  WORLDTRAVEL_SEEDING.md  docker-compose.dev.yml  pyproject.toml
backend_fastapi/app/: deps.py  server.py
backend_fastapi/app/core/: config.py  security.py
backend_fastapi/app/crud/: __init__.py  adventure.py  integrations.py  user.py  worldtravel.py
backend_fastapi/app/models/: __init__.py  adventure.py  base.py  integrations.py  user.py  worldtravel.py
backend_fastapi/app/routers/: activities.py  auth.py  categories.py  checklists.py  collections.py  import_export.py  integrations.py  locations.py  lodging.py  notes.py  stats.py  trails.py  transportation.py  visits.py  worldtravel.py
backend_fastapi/app/scripts/: __init__.py  seed_worldtravel.py
docs/: DOCKER_SETUP.md
frontend_alpine/: API_ALIGNMENT_AUDIT.md  API_AUDIT.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  Dockerfile  Makefile  NAVIGATION_DEBUG.md  README.md  SOLUTION.md  build.py  build_svelte_components.sh  nginx.conf  rebuild.sh  requirements.txt
scripts/: health-check.sh  validate-compose.sh
(+72 files in other folders)
